# CMake

./: README.md
cmake_example/: CMakeLists.txt  main.cpp
cmake_example 20250913/: CMakeLists.txt
cmake_example/include/: colorful_hello.h
cmake_example/src/: colorful_hello.cpp  main.cpp
cmake_example3/: CMakeLists.txt
cmake_example3/include/: colorful_hello.h
cmake_example3/src/: colorful_hello.cpp  main.cpp
